latex2mmlc/src/snapshots/latex2mmlc__parse__tests__sub_big_paren.snap
---
source: latex2mmlc/src/parse.rs
expression: "x_\\big("
---
[
  Subscript(
    target: SingleLetterIdent('x', false),
    symbol: SizedParen(Scale1, ParenOp('(', false, Always)),
  ),
]
