latex2mmlc/src/snapshots/latex2mmlc__parse__tests__sub_number.snap
---
source: latex2mmlc/src/parse.rs
expression: x_123
---
[
  Subscript(
    target: SingleLetterIdent('x', false),
    symbol: Number("1"),
  ),
  Number("23"),
]
