latex2mmlc/src/snapshots/latex2mmlc__parse__tests__textbf.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\textbf{abc}"
---
[
  TextTransform(
    tf: Transform(Bold),
    content: Text("abc"),
  ),
]
